FLproject/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SEPARATOR

Grammar

Rule 0     S' -> programm
Rule 1     programm -> function
Rule 2     programm -> function programm
Rule 3     function -> FUNCTION signature L_BRACE body R_BRACE
Rule 4     signature -> IDENT L_BRACKET argumentList R_BRACKET
Rule 5     body -> infinstruction
Rule 6     argumentList -> IDENT
Rule 7     argumentList -> IDENT COMMA argumentList
Rule 8     argumentList -> <empty>
Rule 9     instruction -> assigment
Rule 10    instruction -> return
Rule 11    instruction -> condition
Rule 12    instruction -> loop
Rule 13    instruction -> <empty>
Rule 14    instruction -> assigment instruction
Rule 15    instruction -> return instruction
Rule 16    instruction -> condition instruction
Rule 17    instruction -> loop instruction
Rule 18    infinstruction -> infinstruction instruction
Rule 19    infinstruction -> instruction
Rule 20    assigment -> IDENT ASSIGN arExpression
Rule 21    return -> RETURN arExpression
Rule 22    condition -> IF arExpression L_BRACE instruction R_BRACE
Rule 23    condition -> IF arExpression L_BRACE instruction R_BRACE ELSE L_BRACE instruction R_BRACE
Rule 24    loop -> WHILE arExpression L_BRACE instruction R_BRACE
Rule 25    arExpression -> disjunct
Rule 26    arExpression -> disjunct OR arExpression
Rule 27    disjunct -> conjunct
Rule 28    disjunct -> conjunct AND disjunct
Rule 29    conjunct -> binaryExp
Rule 30    conjunct -> binaryExp BIN_OP binaryExp
Rule 31    binaryExp -> expression
Rule 32    binaryExp -> NOT expression
Rule 33    expression -> term
Rule 34    expression -> expression PLUS term
Rule 35    expression -> expression MINUS term
Rule 36    term -> factor
Rule 37    term -> term MUL_OP factor
Rule 38    factor -> base
Rule 39    factor -> MINUS factor
Rule 40    factor -> base FACTOR factor
Rule 41    base -> NUMBER
Rule 42    base -> IDENT
Rule 43    base -> L_BRACKET arExpression R_BRACKET
Rule 44    base -> signature

Terminals, with rules where they appear

AND                  : 28
ASSIGN               : 20
BIN_OP               : 30
COMMA                : 7
ELSE                 : 23
FACTOR               : 40
FUNCTION             : 3
IDENT                : 4 6 7 20 42
IF                   : 22 23
L_BRACE              : 3 22 23 23 24
L_BRACKET            : 4 43
MINUS                : 35 39
MUL_OP               : 37
NOT                  : 32
NUMBER               : 41
OR                   : 26
PLUS                 : 34
RETURN               : 21
R_BRACE              : 3 22 23 23 24
R_BRACKET            : 4 43
SEPARATOR            : 
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

arExpression         : 20 21 22 23 24 26 43
argumentList         : 4 7
assigment            : 9 14
base                 : 38 40
binaryExp            : 29 30 30
body                 : 3
condition            : 11 16
conjunct             : 27 28
disjunct             : 25 26 28
expression           : 31 32 34 35
factor               : 36 37 39 40
function             : 1 2
infinstruction       : 5 18
instruction          : 14 15 16 17 18 19 22 23 23 24
loop                 : 12 17
programm             : 2 0
return               : 10 15
signature            : 3 44
term                 : 33 34 35 37

Parsing method: LALR

state 0

    (0) S' -> . programm
    (1) programm -> . function
    (2) programm -> . function programm
    (3) function -> . FUNCTION signature L_BRACE body R_BRACE

    FUNCTION        shift and go to state 3

    programm                       shift and go to state 1
    function                       shift and go to state 2

state 1

    (0) S' -> programm .



state 2

    (1) programm -> function .
    (2) programm -> function . programm
    (1) programm -> . function
    (2) programm -> . function programm
    (3) function -> . FUNCTION signature L_BRACE body R_BRACE

    $end            reduce using rule 1 (programm -> function .)
    FUNCTION        shift and go to state 3

    function                       shift and go to state 2
    programm                       shift and go to state 4

state 3

    (3) function -> FUNCTION . signature L_BRACE body R_BRACE
    (4) signature -> . IDENT L_BRACKET argumentList R_BRACKET

    IDENT           shift and go to state 6

    signature                      shift and go to state 5

state 4

    (2) programm -> function programm .

    $end            reduce using rule 2 (programm -> function programm .)


state 5

    (3) function -> FUNCTION signature . L_BRACE body R_BRACE

    L_BRACE         shift and go to state 7


state 6

    (4) signature -> IDENT . L_BRACKET argumentList R_BRACKET

    L_BRACKET       shift and go to state 8


state 7

    (3) function -> FUNCTION signature L_BRACE . body R_BRACE
    (5) body -> . infinstruction
    (18) infinstruction -> . infinstruction instruction
    (19) infinstruction -> . instruction
    (9) instruction -> . assigment
    (10) instruction -> . return
    (11) instruction -> . condition
    (12) instruction -> . loop
    (13) instruction -> .
    (14) instruction -> . assigment instruction
    (15) instruction -> . return instruction
    (16) instruction -> . condition instruction
    (17) instruction -> . loop instruction
    (20) assigment -> . IDENT ASSIGN arExpression
    (21) return -> . RETURN arExpression
    (22) condition -> . IF arExpression L_BRACE instruction R_BRACE
    (23) condition -> . IF arExpression L_BRACE instruction R_BRACE ELSE L_BRACE instruction R_BRACE
    (24) loop -> . WHILE arExpression L_BRACE instruction R_BRACE

  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    R_BRACE         reduce using rule 13 (instruction -> .)
    IDENT           shift and go to state 16
    RETURN          shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19

  ! IDENT           [ reduce using rule 13 (instruction -> .) ]
  ! RETURN          [ reduce using rule 13 (instruction -> .) ]
  ! IF              [ reduce using rule 13 (instruction -> .) ]
  ! WHILE           [ reduce using rule 13 (instruction -> .) ]

    body                           shift and go to state 9
    infinstruction                 shift and go to state 10
    instruction                    shift and go to state 11
    assigment                      shift and go to state 12
    return                         shift and go to state 13
    condition                      shift and go to state 14
    loop                           shift and go to state 15

state 8

    (4) signature -> IDENT L_BRACKET . argumentList R_BRACKET
    (6) argumentList -> . IDENT
    (7) argumentList -> . IDENT COMMA argumentList
    (8) argumentList -> .

    IDENT           shift and go to state 20
    R_BRACKET       reduce using rule 8 (argumentList -> .)

    argumentList                   shift and go to state 21

state 9

    (3) function -> FUNCTION signature L_BRACE body . R_BRACE

    R_BRACE         shift and go to state 22


state 10

    (5) body -> infinstruction .
    (18) infinstruction -> infinstruction . instruction
    (9) instruction -> . assigment
    (10) instruction -> . return
    (11) instruction -> . condition
    (12) instruction -> . loop
    (13) instruction -> .
    (14) instruction -> . assigment instruction
    (15) instruction -> . return instruction
    (16) instruction -> . condition instruction
    (17) instruction -> . loop instruction
    (20) assigment -> . IDENT ASSIGN arExpression
    (21) return -> . RETURN arExpression
    (22) condition -> . IF arExpression L_BRACE instruction R_BRACE
    (23) condition -> . IF arExpression L_BRACE instruction R_BRACE ELSE L_BRACE instruction R_BRACE
    (24) loop -> . WHILE arExpression L_BRACE instruction R_BRACE

  ! reduce/reduce conflict for R_BRACE resolved using rule 5 (body -> infinstruction .)
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    R_BRACE         reduce using rule 5 (body -> infinstruction .)
    IDENT           shift and go to state 16
    RETURN          shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19

  ! IDENT           [ reduce using rule 13 (instruction -> .) ]
  ! RETURN          [ reduce using rule 13 (instruction -> .) ]
  ! IF              [ reduce using rule 13 (instruction -> .) ]
  ! WHILE           [ reduce using rule 13 (instruction -> .) ]
  ! R_BRACE         [ reduce using rule 13 (instruction -> .) ]

    instruction                    shift and go to state 23
    assigment                      shift and go to state 12
    return                         shift and go to state 13
    condition                      shift and go to state 14
    loop                           shift and go to state 15

state 11

    (19) infinstruction -> instruction .

    IDENT           reduce using rule 19 (infinstruction -> instruction .)
    RETURN          reduce using rule 19 (infinstruction -> instruction .)
    IF              reduce using rule 19 (infinstruction -> instruction .)
    WHILE           reduce using rule 19 (infinstruction -> instruction .)
    R_BRACE         reduce using rule 19 (infinstruction -> instruction .)


state 12

    (9) instruction -> assigment .
    (14) instruction -> assigment . instruction
    (9) instruction -> . assigment
    (10) instruction -> . return
    (11) instruction -> . condition
    (12) instruction -> . loop
    (13) instruction -> .
    (14) instruction -> . assigment instruction
    (15) instruction -> . return instruction
    (16) instruction -> . condition instruction
    (17) instruction -> . loop instruction
    (20) assigment -> . IDENT ASSIGN arExpression
    (21) return -> . RETURN arExpression
    (22) condition -> . IF arExpression L_BRACE instruction R_BRACE
    (23) condition -> . IF arExpression L_BRACE instruction R_BRACE ELSE L_BRACE instruction R_BRACE
    (24) loop -> . WHILE arExpression L_BRACE instruction R_BRACE

  ! reduce/reduce conflict for IDENT resolved using rule 9 (instruction -> assigment .)
  ! reduce/reduce conflict for RETURN resolved using rule 9 (instruction -> assigment .)
  ! reduce/reduce conflict for IF resolved using rule 9 (instruction -> assigment .)
  ! reduce/reduce conflict for WHILE resolved using rule 9 (instruction -> assigment .)
  ! reduce/reduce conflict for R_BRACE resolved using rule 9 (instruction -> assigment .)
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    R_BRACE         reduce using rule 9 (instruction -> assigment .)
    IDENT           shift and go to state 16
    RETURN          shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19

  ! IDENT           [ reduce using rule 9 (instruction -> assigment .) ]
  ! RETURN          [ reduce using rule 9 (instruction -> assigment .) ]
  ! IF              [ reduce using rule 9 (instruction -> assigment .) ]
  ! WHILE           [ reduce using rule 9 (instruction -> assigment .) ]
  ! IDENT           [ reduce using rule 13 (instruction -> .) ]
  ! RETURN          [ reduce using rule 13 (instruction -> .) ]
  ! IF              [ reduce using rule 13 (instruction -> .) ]
  ! WHILE           [ reduce using rule 13 (instruction -> .) ]
  ! R_BRACE         [ reduce using rule 13 (instruction -> .) ]

    assigment                      shift and go to state 12
    instruction                    shift and go to state 24
    return                         shift and go to state 13
    condition                      shift and go to state 14
    loop                           shift and go to state 15

state 13

    (10) instruction -> return .
    (15) instruction -> return . instruction
    (9) instruction -> . assigment
    (10) instruction -> . return
    (11) instruction -> . condition
    (12) instruction -> . loop
    (13) instruction -> .
    (14) instruction -> . assigment instruction
    (15) instruction -> . return instruction
    (16) instruction -> . condition instruction
    (17) instruction -> . loop instruction
    (20) assigment -> . IDENT ASSIGN arExpression
    (21) return -> . RETURN arExpression
    (22) condition -> . IF arExpression L_BRACE instruction R_BRACE
    (23) condition -> . IF arExpression L_BRACE instruction R_BRACE ELSE L_BRACE instruction R_BRACE
    (24) loop -> . WHILE arExpression L_BRACE instruction R_BRACE

  ! reduce/reduce conflict for IDENT resolved using rule 10 (instruction -> return .)
  ! reduce/reduce conflict for RETURN resolved using rule 10 (instruction -> return .)
  ! reduce/reduce conflict for IF resolved using rule 10 (instruction -> return .)
  ! reduce/reduce conflict for WHILE resolved using rule 10 (instruction -> return .)
  ! reduce/reduce conflict for R_BRACE resolved using rule 10 (instruction -> return .)
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    R_BRACE         reduce using rule 10 (instruction -> return .)
    IDENT           shift and go to state 16
    RETURN          shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19

  ! IDENT           [ reduce using rule 10 (instruction -> return .) ]
  ! RETURN          [ reduce using rule 10 (instruction -> return .) ]
  ! IF              [ reduce using rule 10 (instruction -> return .) ]
  ! WHILE           [ reduce using rule 10 (instruction -> return .) ]
  ! IDENT           [ reduce using rule 13 (instruction -> .) ]
  ! RETURN          [ reduce using rule 13 (instruction -> .) ]
  ! IF              [ reduce using rule 13 (instruction -> .) ]
  ! WHILE           [ reduce using rule 13 (instruction -> .) ]
  ! R_BRACE         [ reduce using rule 13 (instruction -> .) ]

    return                         shift and go to state 13
    instruction                    shift and go to state 25
    assigment                      shift and go to state 12
    condition                      shift and go to state 14
    loop                           shift and go to state 15

state 14

    (11) instruction -> condition .
    (16) instruction -> condition . instruction
    (9) instruction -> . assigment
    (10) instruction -> . return
    (11) instruction -> . condition
    (12) instruction -> . loop
    (13) instruction -> .
    (14) instruction -> . assigment instruction
    (15) instruction -> . return instruction
    (16) instruction -> . condition instruction
    (17) instruction -> . loop instruction
    (20) assigment -> . IDENT ASSIGN arExpression
    (21) return -> . RETURN arExpression
    (22) condition -> . IF arExpression L_BRACE instruction R_BRACE
    (23) condition -> . IF arExpression L_BRACE instruction R_BRACE ELSE L_BRACE instruction R_BRACE
    (24) loop -> . WHILE arExpression L_BRACE instruction R_BRACE

  ! reduce/reduce conflict for IDENT resolved using rule 11 (instruction -> condition .)
  ! reduce/reduce conflict for RETURN resolved using rule 11 (instruction -> condition .)
  ! reduce/reduce conflict for IF resolved using rule 11 (instruction -> condition .)
  ! reduce/reduce conflict for WHILE resolved using rule 11 (instruction -> condition .)
  ! reduce/reduce conflict for R_BRACE resolved using rule 11 (instruction -> condition .)
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    R_BRACE         reduce using rule 11 (instruction -> condition .)
    IDENT           shift and go to state 16
    RETURN          shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19

  ! IDENT           [ reduce using rule 11 (instruction -> condition .) ]
  ! RETURN          [ reduce using rule 11 (instruction -> condition .) ]
  ! IF              [ reduce using rule 11 (instruction -> condition .) ]
  ! WHILE           [ reduce using rule 11 (instruction -> condition .) ]
  ! IDENT           [ reduce using rule 13 (instruction -> .) ]
  ! RETURN          [ reduce using rule 13 (instruction -> .) ]
  ! IF              [ reduce using rule 13 (instruction -> .) ]
  ! WHILE           [ reduce using rule 13 (instruction -> .) ]
  ! R_BRACE         [ reduce using rule 13 (instruction -> .) ]

    condition                      shift and go to state 14
    instruction                    shift and go to state 26
    assigment                      shift and go to state 12
    return                         shift and go to state 13
    loop                           shift and go to state 15

state 15

    (12) instruction -> loop .
    (17) instruction -> loop . instruction
    (9) instruction -> . assigment
    (10) instruction -> . return
    (11) instruction -> . condition
    (12) instruction -> . loop
    (13) instruction -> .
    (14) instruction -> . assigment instruction
    (15) instruction -> . return instruction
    (16) instruction -> . condition instruction
    (17) instruction -> . loop instruction
    (20) assigment -> . IDENT ASSIGN arExpression
    (21) return -> . RETURN arExpression
    (22) condition -> . IF arExpression L_BRACE instruction R_BRACE
    (23) condition -> . IF arExpression L_BRACE instruction R_BRACE ELSE L_BRACE instruction R_BRACE
    (24) loop -> . WHILE arExpression L_BRACE instruction R_BRACE

  ! reduce/reduce conflict for IDENT resolved using rule 12 (instruction -> loop .)
  ! reduce/reduce conflict for RETURN resolved using rule 12 (instruction -> loop .)
  ! reduce/reduce conflict for IF resolved using rule 12 (instruction -> loop .)
  ! reduce/reduce conflict for WHILE resolved using rule 12 (instruction -> loop .)
  ! reduce/reduce conflict for R_BRACE resolved using rule 12 (instruction -> loop .)
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    R_BRACE         reduce using rule 12 (instruction -> loop .)
    IDENT           shift and go to state 16
    RETURN          shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19

  ! IDENT           [ reduce using rule 12 (instruction -> loop .) ]
  ! RETURN          [ reduce using rule 12 (instruction -> loop .) ]
  ! IF              [ reduce using rule 12 (instruction -> loop .) ]
  ! WHILE           [ reduce using rule 12 (instruction -> loop .) ]
  ! IDENT           [ reduce using rule 13 (instruction -> .) ]
  ! RETURN          [ reduce using rule 13 (instruction -> .) ]
  ! IF              [ reduce using rule 13 (instruction -> .) ]
  ! WHILE           [ reduce using rule 13 (instruction -> .) ]
  ! R_BRACE         [ reduce using rule 13 (instruction -> .) ]

    loop                           shift and go to state 15
    instruction                    shift and go to state 27
    assigment                      shift and go to state 12
    return                         shift and go to state 13
    condition                      shift and go to state 14

state 16

    (20) assigment -> IDENT . ASSIGN arExpression

    ASSIGN          shift and go to state 28


state 17

    (21) return -> RETURN . arExpression
    (25) arExpression -> . disjunct
    (26) arExpression -> . disjunct OR arExpression
    (27) disjunct -> . conjunct
    (28) disjunct -> . conjunct AND disjunct
    (29) conjunct -> . binaryExp
    (30) conjunct -> . binaryExp BIN_OP binaryExp
    (31) binaryExp -> . expression
    (32) binaryExp -> . NOT expression
    (33) expression -> . term
    (34) expression -> . expression PLUS term
    (35) expression -> . expression MINUS term
    (36) term -> . factor
    (37) term -> . term MUL_OP factor
    (38) factor -> . base
    (39) factor -> . MINUS factor
    (40) factor -> . base FACTOR factor
    (41) base -> . NUMBER
    (42) base -> . IDENT
    (43) base -> . L_BRACKET arExpression R_BRACKET
    (44) base -> . signature
    (4) signature -> . IDENT L_BRACKET argumentList R_BRACKET

    NOT             shift and go to state 34
    MINUS           shift and go to state 36
    NUMBER          shift and go to state 39
    IDENT           shift and go to state 40
    L_BRACKET       shift and go to state 41

    arExpression                   shift and go to state 29
    disjunct                       shift and go to state 30
    conjunct                       shift and go to state 31
    binaryExp                      shift and go to state 32
    expression                     shift and go to state 33
    term                           shift and go to state 35
    factor                         shift and go to state 37
    base                           shift and go to state 38
    signature                      shift and go to state 42

state 18

    (22) condition -> IF . arExpression L_BRACE instruction R_BRACE
    (23) condition -> IF . arExpression L_BRACE instruction R_BRACE ELSE L_BRACE instruction R_BRACE
    (25) arExpression -> . disjunct
    (26) arExpression -> . disjunct OR arExpression
    (27) disjunct -> . conjunct
    (28) disjunct -> . conjunct AND disjunct
    (29) conjunct -> . binaryExp
    (30) conjunct -> . binaryExp BIN_OP binaryExp
    (31) binaryExp -> . expression
    (32) binaryExp -> . NOT expression
    (33) expression -> . term
    (34) expression -> . expression PLUS term
    (35) expression -> . expression MINUS term
    (36) term -> . factor
    (37) term -> . term MUL_OP factor
    (38) factor -> . base
    (39) factor -> . MINUS factor
    (40) factor -> . base FACTOR factor
    (41) base -> . NUMBER
    (42) base -> . IDENT
    (43) base -> . L_BRACKET arExpression R_BRACKET
    (44) base -> . signature
    (4) signature -> . IDENT L_BRACKET argumentList R_BRACKET

    NOT             shift and go to state 34
    MINUS           shift and go to state 36
    NUMBER          shift and go to state 39
    IDENT           shift and go to state 40
    L_BRACKET       shift and go to state 41

    arExpression                   shift and go to state 43
    disjunct                       shift and go to state 30
    conjunct                       shift and go to state 31
    binaryExp                      shift and go to state 32
    expression                     shift and go to state 33
    term                           shift and go to state 35
    factor                         shift and go to state 37
    base                           shift and go to state 38
    signature                      shift and go to state 42

state 19

    (24) loop -> WHILE . arExpression L_BRACE instruction R_BRACE
    (25) arExpression -> . disjunct
    (26) arExpression -> . disjunct OR arExpression
    (27) disjunct -> . conjunct
    (28) disjunct -> . conjunct AND disjunct
    (29) conjunct -> . binaryExp
    (30) conjunct -> . binaryExp BIN_OP binaryExp
    (31) binaryExp -> . expression
    (32) binaryExp -> . NOT expression
    (33) expression -> . term
    (34) expression -> . expression PLUS term
    (35) expression -> . expression MINUS term
    (36) term -> . factor
    (37) term -> . term MUL_OP factor
    (38) factor -> . base
    (39) factor -> . MINUS factor
    (40) factor -> . base FACTOR factor
    (41) base -> . NUMBER
    (42) base -> . IDENT
    (43) base -> . L_BRACKET arExpression R_BRACKET
    (44) base -> . signature
    (4) signature -> . IDENT L_BRACKET argumentList R_BRACKET

    NOT             shift and go to state 34
    MINUS           shift and go to state 36
    NUMBER          shift and go to state 39
    IDENT           shift and go to state 40
    L_BRACKET       shift and go to state 41

    arExpression                   shift and go to state 44
    disjunct                       shift and go to state 30
    conjunct                       shift and go to state 31
    binaryExp                      shift and go to state 32
    expression                     shift and go to state 33
    term                           shift and go to state 35
    factor                         shift and go to state 37
    base                           shift and go to state 38
    signature                      shift and go to state 42

state 20

    (6) argumentList -> IDENT .
    (7) argumentList -> IDENT . COMMA argumentList

    R_BRACKET       reduce using rule 6 (argumentList -> IDENT .)
    COMMA           shift and go to state 45


state 21

    (4) signature -> IDENT L_BRACKET argumentList . R_BRACKET

    R_BRACKET       shift and go to state 46


state 22

    (3) function -> FUNCTION signature L_BRACE body R_BRACE .

    FUNCTION        reduce using rule 3 (function -> FUNCTION signature L_BRACE body R_BRACE .)
    $end            reduce using rule 3 (function -> FUNCTION signature L_BRACE body R_BRACE .)


state 23

    (18) infinstruction -> infinstruction instruction .

    IDENT           reduce using rule 18 (infinstruction -> infinstruction instruction .)
    RETURN          reduce using rule 18 (infinstruction -> infinstruction instruction .)
    IF              reduce using rule 18 (infinstruction -> infinstruction instruction .)
    WHILE           reduce using rule 18 (infinstruction -> infinstruction instruction .)
    R_BRACE         reduce using rule 18 (infinstruction -> infinstruction instruction .)


state 24

    (14) instruction -> assigment instruction .

    IDENT           reduce using rule 14 (instruction -> assigment instruction .)
    RETURN          reduce using rule 14 (instruction -> assigment instruction .)
    IF              reduce using rule 14 (instruction -> assigment instruction .)
    WHILE           reduce using rule 14 (instruction -> assigment instruction .)
    R_BRACE         reduce using rule 14 (instruction -> assigment instruction .)


state 25

    (15) instruction -> return instruction .

    IDENT           reduce using rule 15 (instruction -> return instruction .)
    RETURN          reduce using rule 15 (instruction -> return instruction .)
    IF              reduce using rule 15 (instruction -> return instruction .)
    WHILE           reduce using rule 15 (instruction -> return instruction .)
    R_BRACE         reduce using rule 15 (instruction -> return instruction .)


state 26

    (16) instruction -> condition instruction .

    IDENT           reduce using rule 16 (instruction -> condition instruction .)
    RETURN          reduce using rule 16 (instruction -> condition instruction .)
    IF              reduce using rule 16 (instruction -> condition instruction .)
    WHILE           reduce using rule 16 (instruction -> condition instruction .)
    R_BRACE         reduce using rule 16 (instruction -> condition instruction .)


state 27

    (17) instruction -> loop instruction .

    IDENT           reduce using rule 17 (instruction -> loop instruction .)
    RETURN          reduce using rule 17 (instruction -> loop instruction .)
    IF              reduce using rule 17 (instruction -> loop instruction .)
    WHILE           reduce using rule 17 (instruction -> loop instruction .)
    R_BRACE         reduce using rule 17 (instruction -> loop instruction .)


state 28

    (20) assigment -> IDENT ASSIGN . arExpression
    (25) arExpression -> . disjunct
